# miscellaneous

./: .gitignore  README.md  settings.py
advanced_econometrics/: 00_advanced_econometrics.ipynb  README.md  advanced_econ.py  pyproject.toml
advanced_econometrics/src/: helpers_plot.py  utils.py
env_miscellaneous/Scripts/: activate  activate.bat  pyjson5-script.py
nlp_code/: ecb_pc.py  scrape.py  webscraping.ipynb
nlp_code/latex/: 20231124_WebScraping_PaperRep.aux  20231124_WebScraping_PaperRep.out  20231124_WebScraping_PaperRep.tex
notebooks/: GRE_voc.xlsx  LSTR.ipynb  Untitled1-Copy1.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled4.ipynb  VAR.ipynb  bootstrapping.ipynb  covid_cases.ipynb  macd_analysis.ipynb  pivot_data.ipynb  transitivity.ipynb  web_scraping.ipynb  webscraping_EU.ipynb
src/: macd_analysis.py  read_csv_gz.py  transitivity.py
