[project]
name = "ambg-announcement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "mysql-connector-python>=9.1.0",
    "numpy>=2.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pre-commit>=4.0.1",
    "pyarrow>=19.0.0",
    "regex>=2024.11.6",
    "ruff>=0.8.3",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.36",
    "statsmodels>=0.14.4",
    "toml>=0.10.2",
    "tomli-w>=1.1.0",
    "tqdm>=4.67.1",
    "wrds>=3.1.2",
    "xarray>=2024.11.0",
]
