[project]
name = "advanced-econometrics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
]
